--- a/public/css/core.css
+++ b/public/css/core.css
@@ -7222,6 +7222,7 @@ button.bg-dark:focus {
 .mb-2,
 .my-2 {
   margin-bottom: 1.5rem !important;
+  text-align: center;
 }
 
 .ml-2,
@@ -11606,6 +11607,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-weight: 500;
   font-size: 1.285rem;
   margin-bottom: 1.53rem;
+  text-align: center;
 }
 .card .card-bordered {
   border: 1px solid rgba(34, 41, 47, 0.125);
